New upstream release.
* New upstream release.
  - Fixes CVE-2013-4365: heap buffer overwrite. (Closes: #725942)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
-libapache2-mod-fcgid (1:2.3.7-2) UNRELEASED; urgency=low
+libapache2-mod-fcgid (1:2.3.9-1) UNRELEASED; urgency=low
 
+  * New upstream release.
+    - Fixes CVE-2013-4365: heap buffer overwrite. (Closes: #725942)
   * Further improve the long description. (Closes: #719534)
 
  -- Felix Geyer <fgeyer@debian.org>  Tue, 17 Sep 2013 21:33:21 +0200
